--- a/test/visual/reveal/close-on-click.html
+++ b/test/visual/reveal/close-on-click.html
@@ -17,21 +17,21 @@
 
           <h1>Reveal: closeOnClick option</h1>
 
-          <p>This modal should not close when clicking/taping outside of it.</p>
+          <p>This modal should not close when clicking/tapping outside of it.</p>
           <p><button class="button" data-open="exampleModal1">Open modal</button></p>
 
           <div class="reveal" id="exampleModal1" data-reveal data-close-on-click="false">
-            <p>Clicking/taping outside of me SHOULD NOT close me.</p>
+            <p>Clicking/tapping outside of me SHOULD NOT close me.</p>
             <p><button class="button" data-close="exampleModal1">Close</button></p>
           </div>
 
           <hr>
 
-          <p>This modal should close when clicking (desktop) or taping without swiping (mobile) outside of it.</p>
+          <p>This modal should close when clicking (desktop) or tapping without swiping (mobile) outside of it.</p>
           <p><button class="button" data-open="exampleModal2">Open modal</button></p>
 
           <div class="reveal" id="exampleModal2" data-reveal data-close-on-click="true">
-            <p>Clicking (desktop) or taping without swiping (mobile) outside of me SHOULD close me.</p>
+            <p>Clicking (desktop) or tapping without swiping (mobile) outside of me SHOULD close me.</p>
             <p><button class="button" data-close="exampleModal2">Close</button></p>
           </div>
 
