feat: consider formnovalidate attr
Besides I've added an enableValidation method to set isEnabled via JS.

--- a/test/visual/abide/text.html
+++ b/test/visual/abide/text.html
@@ -106,6 +106,16 @@
             <button type="submit" class="button">Submit</button>
             <button type="reset" class="button">Reset</button>
           </form>
+
+          <hr>
+
+          <p>This submit button uses the `formnovalidate` attribute to disable validation before submitting the form.</p>
+
+          <form data-abide novalidate>
+            <input required type="text" placeholder="Required">
+            <button type="submit" class="button" formnovalidate>Submit</button>
+            <button type="reset" class="button">Reset</button>
+          </form>
         </div>
       </div>
     </div>
