chore: update org name

--- a/customizer/index.html
+++ b/customizer/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="grid-x grid-padding-x">
               <div class="large-4 medium-4 medium-push-2 cell">
-                <p><a href="http://github.com/zurb/foundation">Foundation on Github</a><br />Latest code, issue reports, feature requests and more.</p>
+                <p><a href="http://github.com/foundation/foundation">Foundation on Github</a><br />Latest code, issue reports, feature requests and more.</p>
               </div>
               <div class="large-4 medium-4 medium-pull-2 cell">
                 <p><a href="https://twitter.com/ZURBfoundation">@zurbfoundation</a><br />Ping us on Twitter if you have questions. When you build something with this we'd love to see it (and send you a totally boss sticker).</p>
