--- a/customizer/index.html
+++ b/customizer/index.html
@@ -1,14 +1,15 @@
+
 <!doctype html>
-<html class="no-js" lang="en" dir="ltr">
+<html class="no-js" lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foundation for Sites</title>
-    <link rel="stylesheet" href="css/foundation.css">
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="assets/css/foundation.css">
   </head>
-  <body>
+<body>
+
     <div class="grid-container">
       <div class="grid-x grid-padding-x">
         <div class="large-12 cell">
@@ -24,20 +25,18 @@
             <p>Once you've exhausted the fun in this document, you should check out:</p>
             <div class="grid-x grid-padding-x">
               <div class="large-4 medium-4 cell">
-                <p><a href="https://get.foundation/docs">Foundation Documentation</a><br />Everything you need to know about using the framework.</p>
+                <p><a href="https://get.foundation/sites/docs/">Foundation Documentation</a><br />Everything you need to know about using the framework.</p>
               </div>
               <div class="large-4 medium-4 cell">
-              </div>
-              <div class="large-4 medium-4 cell">
-                <p><a href="https://get.foundation/forum">Foundation Forum</a><br />Join the Foundation community to ask a question or show off your knowledge.</p>
+                <p><a href="https://github.com/foundation/foundation-sites/discussions">Foundation Forum</a><br />Join the Foundation community to ask a question or show off your knowlege.</p>
               </div>
             </div>
             <div class="grid-x grid-padding-x">
               <div class="large-4 medium-4 medium-push-2 cell">
-                <p><a href="http://github.com/foundation/foundation">Foundation on Github</a><br />Latest code, issue reports, feature requests and more.</p>
+                <p><a href="https://github.com/foundation/foundation-sites">Foundation on Github</a><br />Latest code, issue reports, feature requests and more.</p>
               </div>
               <div class="large-4 medium-4 medium-pull-2 cell">
-                <p><a href="https://twitter.com/ZURBfoundation">@zurbfoundation</a><br />Ping us on Twitter if you have questions. When you build something with this we'd love to see it (and send you a totally boss sticker).</p>
+                <p><a href="https://twitter.com/FoundationCSS">@FoundationCSS</a><br />Ping us on Twitter if you have questions. When you build something with this we'd love to see it.</p>
               </div>
             </div>
           </div>
@@ -150,9 +149,9 @@
         <div class="large-4 medium-4 cell">
           <h5>Try one of these buttons:</h5>
           <p><a href="#" class="button">Simple Button</a><br/>
-          <a href="#" class="success button">Success Btn</a><br/>
-          <a href="#" class="alert button">Alert Btn</a><br/>
-          <a href="#" class="secondary button">Secondary Btn</a></p>
+            <a href="#" class="success button">Success Btn</a><br/>
+            <a href="#" class="alert button">Alert Btn</a><br/>
+            <a href="#" class="secondary button">Secondary Btn</a></p>
           <div class="callout">
             <h5>So many components, girl!</h5>
             <p>A whole kitchen sink of goodies comes with Foundation. Check out the docs to see them all, along with details on making them your own.</p>
@@ -162,9 +161,8 @@
       </div>
     </div>
 
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/vendor/what-input.js"></script>
-    <script src="js/vendor/foundation.js"></script>
-    <script src="js/app.js"></script>
-  </body>
+
+<script src="assets/js/vendor.js"></script>
+<script src="assets/js/foundation.js"></script>
+</body>
 </html>
